@@ -38,6 +38,13 @@ FBCALL FB_WCHAR *fb_WstrAssignFromA
 	return dst;
 }
 
+/* We'll convert wide-string to multi-byte string -- we don't know
+   how big the result will be, but we can make a good guess.
+   In the worst case, we'll allocate too much. */
+/* 4 bytes per char - allowing for UTF8 multi-byte strings, happens on GNU/Linux.
+   On Windows there can be double-byte encodings etc. too. */
+#define getALenForWLen(wlen) ((wlen) * 4)
+
 FBCALL void *fb_WstrAssignToAEx
 	(
 		void *dst,
@@ -77,44 +84,44 @@ FBCALL void *fb_WstrAssignToAEx
 		else
 		{
         	/* realloc dst if needed and copy src */
+			dst_chars = getALenForWLen(src_chars);
 			if( is_init == FB_FALSE )
 			{
-				if( FB_STRSIZE( dst ) != src_chars )
-					fb_hStrRealloc( (FBSTRING *)dst, src_chars, FB_FALSE );
+				if( FB_STRSIZE( dst ) != dst_chars )
+					fb_hStrRealloc( (FBSTRING *)dst, dst_chars, FB_FALSE );
 			}
 			else
 			{
-				fb_hStrAlloc( (FBSTRING *)dst, src_chars );
+				fb_hStrAlloc( (FBSTRING *)dst, dst_chars );
 			}
 
-			fb_wstr_ConvToA( ((FBSTRING *)dst)->data, src, src_chars );
+			ssize_t writtenchars = fb_wstr_ConvToA( ((FBSTRING *)dst)->data, dst_chars, src );
+			fb_hStrSetLength( dst, writtenchars );
 		}
 	}
 	/* fixed-len or zstring.. */
 	else
 	{
 		/* src NULL? */
-		if( src_chars == 0 )
-		{
-			*(char *)dst = '\0';
-		}
-		else
-		{
-			/* byte ptr? as in C, assume dst is large enough */
-			if( dst_chars == 0 )
-				dst_chars = src_chars;
+		if( src_chars == 0 ) {
+			if( fill_rem && dst_chars > 0 ) {
+				memset( dst, 0, dst_chars );
+			} else {
+				*(char *)dst = '\0';
+			}
+		/* byte ptr? as in C, assume dst is large enough */
+		} else if( dst_chars == 0 ) {
+			dst_chars = getALenForWLen(src_chars);
+			fb_wstr_ConvToA( (char *)dst, dst_chars, src );
+		} else {
+			dst_chars -= 1; /* null terminator */
+			ssize_t writtenchars = fb_wstr_ConvToA( (char *)dst, dst_chars, src );
 
-			fb_wstr_ConvToA( (char *)dst,
-							 src,
-							 (dst_chars <= src_chars? dst_chars : src_chars) );
-		}
-
-		/* fill reminder with null's */
-		if( fill_rem != 0 )
-		{
-			dst_chars -= src_chars;
-			if( dst_chars > 0 )
-				memset( &(((char *)dst)[src_chars]), 0, dst_chars );
+			/* fill remainder with null's */
+			if( fill_rem && writtenchars < dst_chars ) {
+				/* + 1 to fill behind null terminator. There is room for dst_chars + 1. */
+				memset( ((char *)dst) + writtenchars + 1, 0, dst_chars - writtenchars );
+			}
 		}
 	}
 
